--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -18,11 +18,20 @@
     color: #FF5252!important;
 }
 .login {
-    height: 49px;
+    height: 50px;
     background: url("../images/slices.png");
-    background-position: -1305px -188px;
-    width: 49px;
+    background-position: -1307px -189px;;
     display: inline-block;
     background-color: #2196f3;
     color: #fff;
+    width: 60px;
+}
+.register{
+    height: 50px;
+    background: url("../images/slices.png") no-repeat;
+    background-position: -1307px -76px ;
+    display: inline-block;
+    background-color: #2196f3;
+    color: #fff;
+    width: 60px;
 }
