--- a/public/css/users.css
+++ b/public/css/users.css
@@ -24,6 +24,7 @@
     line-height: 32px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    position: relative;
 }
 
 .head_profile {
@@ -271,4 +272,37 @@
 .short_string {
     white-space: nowrap;
     overflow: hidden;
+}
+table thead tr th , table  tbody tr td {
+    white-space: nowrap;
+    overflow: hidden;
+}
+.left-btns{
+    padding-left: 42px;
+    font-size: 24px;
+}
+.Cat_head {
+    background-color: #222d32;
+    color: #fff;
+    text-align: right;
+    height: 45px;
+    line-height: 40px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    position: relative;
+    padding-right: 10px;
+}
+.add{
+    padding-left: 20px;
+}
+@media(max-width: 500px){
+    .left-btns{
+        padding-left: 5px;
+    }
+    .Cat_head{
+        padding-right: 5px;
+    }
+    .add{
+        padding-left: 5px;
+    }
 }
